--- a/profile_portfolio_main_24.1.2/css/index.css
+++ b/profile_portfolio_main_24.1.2/css/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Hind|Montserrat');
 body {font-family: 'Montserrat',sans-serif; box-sizing: border-box; }
 
 a {text-decoration:none; color:#000;}
@@ -11,48 +12,38 @@ a {text-decoration:none; color:#000;}
 #Ladyvolume {margin: 4rem 0 0 0;}
 
 
-@media screen and (max-width:1040px){ 
-.wrap p { font-size:0.9rem; }
-.wmobile {display:block;}   
-.wpc{display:none;}
-}
-
-
-  /* 화살표 */
-#first a {padding-top: 4rem;}
-#first a { z-index:2; position:absolute; bottom:10%;left:50%;z-index:2;
-    display: inline-block; transform: translate(-50%,0); text-align: center; margin:0 auto;
-     color:#000;
+#first .cta {padding-top: 4rem; }
+#first .cta { z-index:2; position:absolute; bottom:10%;left:50%;z-index:2;
+    transform: translate(-50%,0); text-align: center; color:#000;
     font-size:20px; letter-spacing:1rem; text-decoration:none;
     transition:opacity .3s; margin-top:2rem;} 
-#first a:hover {opacity:0.5;}
-#first a span {position: absolute; top:0;left: 50%;
+#first .cta:hover {opacity:0.5;}
+.cta span {position: absolute; top:0;left: 50%;
     width: 24px; height: 24px; margin-left: -12px;
     border-left: 1px solid #000;
     border-bottom: 1px solid #000;
-    transform: rotate(-45deg); animation: sdb04 2s infinite;
-    box-sizing: border-box; margin-bottom:2rem;  }
+    transform: rotate(-45deg); animation: updown 2s infinite;
+    box-sizing: border-box; margin-bottom:2rem; }
 
-    @keyframes sdb04 {
-        0% { 
-            transform:rotate(-45deg) translate(0,0);
-        }
-        20% {
-          transform: rotate(-45deg) translate(-10px,10px);
-        }
-        40% {
-          transform:rotate(-45deg)  translate(0,0);
-        }
-    }
+    @keyframes updown {
+      0% { 
+          transform:rotate(-45deg) translate(0,0);
+      }
+      20% {
+        transform: rotate(-45deg) translate(-10px,10px);
+      }
+      40% {
+        transform:rotate(-45deg)  translate(0,0);
+      }
+  }
 
-  
-#second {padding: 10rem 0; }
+#second {padding: 10rem 0 0 ; }
 #second img {width:100%;}
 #dailyeve p, #Ladyvolume p {margin:1rem 0;}
 #dailyeve img {width: 100%;  margin:0 auto;}
 #banner {text-align: center; width:90%;}
 
-#banner {position:relative; margin:0 auto; border:1px solid red;}
+#banner {position:relative; margin:0 auto;}
 #banner button {position:absolute; top:50%;  z-index: 999; width:2.3rem;
               height:2.3rem; border-radius: 100%; background: rgba(0,0,0,0.4);
               border:none; outline: none;transform: translateY(-50%);}
@@ -62,8 +53,6 @@ a {text-decoration:none; color:#000;}
 #banner button.slick-prev:before {content:"\e93d";}
 #banner button.slick-next {right: -3rem;font-size:0; color:transparent;}
 #banner button.slick-next:before {content:"\e940";}
-
-
 
 
 button.play { width:35px; height: 35px; font-size:0; background: transparent;
@@ -77,21 +66,77 @@ button.pause:before {content:"\ea3b"; font-family: "xeicon";
 button:hover {cursor: pointer;}
 
 
+.background img  {width:100%;}
+.pr_slide {
+  width:100%;
+  height: 100%;
+}
+
+
+.background img {
+  width: 100%;
+}
+
+.pr_slide {
+  position: relative;
+  top: -5px;
+  min-height:600px;
+  overflow: hidden;
+}
+
+.background {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.image-swiper-container1 {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.image-swiper-container1 .swiper-slide {width: 29rem; margin-right: 1.25rem; }
+.image-swiper-container1 .swiper-slide img {
+  transition: all 200ms linear;
+  filter: grayscale(5);
+}
+
+.image-swiper-container1 .swiper-slide-active {
+  transform: scale(1.05);
+  filter: grayscale(0);
+  margin-right: -52px !important;
+  z-index: 999;
+}
+
+.image-swiper-container1 .swiper-slide-active img {
+  transform: scale(1.05);
+  margin: 0 100px 0 -30px !important;
+  filter: grayscale(0);
+  z-index: 999;
+}
+
+.image-swiper-container1 .swiper-slide img {
+  overflow: hidden;
+  width: 100%;
+  
+}
 
 @media screen and (max-width:1200px){ 
   #banner button {width:1.8rem; height:1.8rem;}
-  #banner button::before { font-size: 0.8rem;
-  .play,.puse {font-size: 1rem;}
- }}
+  #banner button::before { font-size: 0.8rem;}
+  .play.pause {font-size: 1rem;}
+  .pr_slide {
+    height: 400px;
+  }
+ }
 
 
-
-.center img {width:100%;}
-.slick-center h3 {color: #e67e22;   opacity: 1; transform: scale(1.08);  }
-.center h3 {opacity: 0.8;transition: all 300ms ease;  margin: 10px;
-            padding: 2%; }
-
-.slider {z-index:9999;}
-
-.background img  {width:100%;}
-.pr_slide {width:100%;}
+ @media screen and (max-width:1040px){ 
+  .wrap p { font-size:0.9rem; }
+  .wmobile {display:block;}   
+  .wpc{display:none;}
+  }
