--- a/itMICHHA_portfolio.github/css/index.css
+++ b/itMICHHA_portfolio.github/css/index.css
@@ -1,27 +1,17 @@
-/* @CHARSET "ISO-8859-1"; */
 @charset "utf-8";
 
-
-/* rwd_chy CSS
- * --------------------------------------- */
 *,
 *:after,
 *:before {
 	box-sizing: border-box;
 }
 
-/* @font-face {
-    font-family: 'GmarketSans';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-} */
 
 @font-face {
-	font-family:'GmarketSans';
-	src:url(../font/GmarketSansTTFLight.ttf) format('truetype');
-	font-weight:300;
- }
+	font-family: 'GmarketSans';
+	src: url(../font/GmarketSansTTFLight.ttf) format('truetype');
+	font-weight: 300;
+}
 
 @font-face {
 	font-family: 'Pretendard';
@@ -55,18 +45,44 @@
 }
 
 
-
-
-body a {
-	font-family: Pretendard;
-	font-size: 1rem;
-	color: #000;
+@font-face {
+	font-family: 'Pretendard';
+	src: url(../font/Pretendard-Bold.woff2) format('woff');
+	font-weight: 700;
+	font-style: normal;
 }
 
 
-/* 슬라이드 페이지 버튼 */
+@font-face {
+	font-family: 'DMSerifDisplay';
+	src: url(../font/DMSerifDisplay-Regular.ttf) format('truetype');
+}
 
-.section {
+@font-face {
+	font-family: 'PlayfairDisplay';
+
+	src: url(../font/PlayfairDisplay-Regular.ttf) format('truetype');
+	weight: 400;
+}
+
+
+
+@font-face {
+	font-family: 'PlayfairDisplay';
+
+	src: url(../font/PlayfairDisplay-Medium.ttf) format('truetype');
+	weight: 500;
+}
+
+
+body a {
+	font-family: 'Pretendard';
+	font-size: 1rem;
+	color: #000;
+	font-weight: 500;
+}
+
+#section2 {
 	position: relative;
 }
 
@@ -76,8 +92,8 @@ body a {
 	transform: translateY(-50%);
 	margin-top: 45px;
 	z-index: 999;
-	width: 50px;
-	height: 50px;
+	width: 2rem;
+	height:2rem;
 	border-radius: 100%;
 	background-color: rgba(0, 0, 0, 0.3);
 	border: none;
@@ -87,7 +103,7 @@ body a {
 .fp-controlArrow:before {
 	font-family: "xeicon";
 	color: rgba(255, 255, 255, 0.8);
-	font-size: 35px;
+	font-size: 1.3rem;
 }
 
 .fp-controlArrow:before:hover {
@@ -103,7 +119,7 @@ body a {
 .fp-prev:before {
 	content: "\e93b";
 	position: relative;
-	top: 7px;
+	top: 5px;
 	left: 5px;
 }
 
@@ -116,8 +132,8 @@ body a {
 .fp-next:before {
 	content: "\e93e";
 	position: relative;
-	top: 7px;
-	left: 8px;
+	top: 5px;
+	left: 7px;
 }
 
 #section1 .button {
@@ -138,7 +154,7 @@ body a {
 
 #section1 .text {
 	position: absolute;
-	bottom: 10%;
+	bottom: 15%;
 	right: -10%;
 }
 
@@ -179,16 +195,24 @@ body a {
 	}
 }
 
-#section2 .text2 {
-	text-align: center;
-	color:#fff;
-    left:50%;
+.slide {
+	position: relative;
+}
+
+.text2 {
+	text-align: left;
+	color: #fff;
+	position: absolute;
+	left: 50%;
+	bottom: 35%;
+	transform: translateX(-32%);
+	width: 80%;
+	
 }
 
 .text2 p:nth-child(1) {
 	font-family: GmarketSans;
 	font-weight: 300;
-	/* font-style:bold; */
 	font-size: 2.2rem;
 	letter-spacing: 0.15rem;
 }
@@ -198,7 +222,7 @@ body a {
 	font-weight: 500;
 	font-style: normal;
 	font-size: 3.6rem;
-	margin: 0 0.rem;
+	margin: 0 0.8rem;
 
 }
 
@@ -207,6 +231,449 @@ body a {
 	font-weight: 300;
 	letter-spacing: 0.2rem;
 	font-size: 0.7rem;
-	margin-top: 5px;
+	margin: 8px;
 }
+
+.text3 {
+    position: absolute;
+    transform: translateX(-40%);
+}
+
+.product_text p {
+	margin: 10px 0;
+}
+
+.product a {
+	font-family: PlayfairDisplay;
+	font-size: 0.9rem;
+	font-weight: 500;
+}
+
+.product span {
+	display: block;
+	margin: 3px 1px;
+}
+
+.product span a {
+	font-family: pretendard;
+	font-size: 0.7rem;
+	padding: 0;
+	border: 1px solid #000;
+	padding: 1px 4px;
+}
+
+
+
+.pctablet_slide {
+	display: none;
+}
+
+.mobile_slide {
+    margin: 0 auto;
+    width: 75%;
+    position: absolute;
+    top: 6.3rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.mobile_slide img {
+	width: 100%;
+}
+
+.mobile_text {
+    margin: 20px 10px;
+}
+
+.mobile_text .product {
+	margin-bottom: 5px;
+}
+
+
+.instaimage {
+	display: flex;
+	flex-wrap: wrap;
+	width: 90%;
+	margin: 30px auto;
+	z-index:-99;
+}
+
+.instaimage li {
+	width: 50%;
+	padding: 5px;
+	font-size:1.1rem;
+}
+
+
+.instaimage li:nth-of-type(2) {
+	font-family: 'xeicon';
+	font-size:1.2rem;
+}
+
+
+ .instatext {text-align: center; margin-bottom:1.8rem; }
+ .instatext li:nth-child(1) a {font-family:PlayfairDisplay}
+ .xi-instagram {font-family:"xeicon"; font-size:1.2rem; margin-top:0.3rem;}
+
+footer {
+	font-size: 0.5rem;
+	line-height: 1rem;
+	font-family: 'Pretendard';
+	background: #000;
+	color: #fff;
+}
+
+footer a {
+	font-size: 0.5rem;
+	line-height: 0.9rem;
+	font-family: 'Pretendard';
+	color: #fff;
+}
+
+.footer_wrapper {
+	width: 85%;
+	margin: 3rem auto;
+	display: grid;
+	grid-template-columns: 1fr 1.3fr;
+	grid-row-gap: 0.4rem;
+	grid-template-rows: 0.5fr 1.5fr 1fr;
+	grid-column-gap: 0.2rem;
+
+}
+
+.logo {
+	grid-column: 1/3;
+	grid-row: 1/2;
+}
+
+.logo img {
+	width: 25%;
+	border-bottom: 1px solid#000;
+	padding-bottom: 10px;
+}
+
+
+
+.customer_wrap li:first-of-type {
+	font-size: 0.6rem;
+	font-weight: 600;
+	margin-bottom: 0.2rem;
+}
+
+.fmenu_wrap {
+	display: flex;
+	justify-content: space-around;
+}
+
+.fmenu_wrap ul {
+	text-align: justify;
+	font-size: 0.3rem;
+	padding: 0;
+	margin: 0;
+}
+
+
+
+.fmenu_wrap li:first-of-type {
+	font-size: 0.6rem;
+	font-weight: 600;
+	margin-bottom: 0.2rem;
+}
+
+
+.address_wrap {
+	grid-column: 1/3;
+	grid-row: 3/4;
+
+}
+
+.adrress {
+	font-style: normal;
+	text-align: justify;
+	font-size: 0.5rem;
+}
+
+
+
+
+@media screen and (min-width:451px) {
+   
+	
+.mobile_slide {
+    margin: 0 auto;
+    width: 65%;
+    position: absolute;
+    top: 6.3rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
+	
+	.slidewrap li {
+		float: left;
+		width: 50%;
+		padding: 20px 20px;
+		position: relative;
+	}
+
+
+	#section1 .text {
+		position: absolute;
+		bottom: 10%;
+		right: 0%;
+	}
+
+	.product a {
+		font-family: PlayfairDisplay;
+		font-size: 1rem;
+		font-weight: 500;
+	}
+	
+	.product span a {
+		font-family: pretendard;
+		font-size: 0.8rem;
+	}
+
+	.instaimage {
+		width:70%;
+	}
+
+}
+
+
+
+
+@media screen and (min-width:600px) {
+   
+	.mobile_slide {
+		width: 55%;
+	}
+	
+	}
+	
+
+@media screen and (min-width:700px) {
+	#section1 .text {
+		position: absolute;
+		bottom: 26%;
+		right: 10%;
+	}
+
+.mobile_slide {
+    width: 45%;
+}
+	.footer_wrapper {
+		grid-template-columns: 0.5fr 1.5fr 1fr;
+		grid-row-gap: 0.4rem;
+		grid-template-rows: 0.5fr 1fr;
+		grid-column-gap: 0.2rem;
+	}
+
+	.logo {
+		grid-column: 1/3;
+		grid-row: 1/2;
+	}
+
+	.customer_wrap {
+		grid-column: 1/2;
+		grid-row: 2/3;
+	
+	}
+
+	.address_wrap {
+		grid-column: 2/3;
+		grid-row: 2/3;
+		padding-top: 1.3rem;
+	}
+
+	.fmenu_wrap {
+		grid-column: 3/4;
+		grid-row: 2/3;
+
+	}
+
+	.text2 {
+		transform: scale(1.5);
+		position: absolute;
+		bottom: 43%;
+		padding-left: 2rem;
+	}
+
+	}
+
+@media screen and (min-width:800px) {
+
+   
+	.pctablet_slide {
+		display: block;
+		width: 70%;
+		margin: 0 auto;
+		display: flex;
+	}
+
+	.pctablet_slide li:nth-child(1) {
+		margin-right: 2rem;
+	}
+
+
+	.mobile_slide {
+		display: none;
+	}
+
+
+
+	.instaimage {
+		width: 60%;
+	}
+
+	.text2 {
+		padding-left:4.5rem;
+	}
+}
+
+
+@media screen and (min-width:900px) {
+
+	.text2 {
+		position: absolute;
+		padding-left: 9rem;
+	}
+}
+	
+
+
+	@media screen and (min-width:1000px) {
+        
+	#slide2-1 {
+		position: relative;
+	}
+
+	
+		.slidewrap li {
+			float: left;
+			width: 50%;
+			padding: 20px 20px;
+			position: relative;
+		}
+	
+
+	
+		.product a {
+			font-family: PlayfairDisplay;
+			font-size: 1rem;
+			font-weight: 500;
+		}
+		
+		.product span a {
+			font-family: pretendard;
+			font-size: 0.8rem;
+			/* padding: 0;
+			border: 1px solid #000;
+			padding: 1px 4px; */
+		}
+		
+	  
+		.instaimage {
+			display: flex;
+			flex-wrap: nowrap !important;
+			width:80%;
+		}
+	
+	}
+@media screen and (min-width:1200px) {
+
+	#section1 .text {
+		position: absolute;
+		bottom: 24%;
+		right: 18%;
+	}
+
+	.text2 {
+		transform: scale(1.6);
+		position: absolute;
+		bottom: 43%;
+		padding-left: 13rem;
+	}
+
+	.text3 {
+		bottom: 45%;
+	}
+
+
+	footer,
+	footer a,
+	.adrress {
+		font-size: 0.7rem;
+		line-height: 1.3rem;
+	}
+
+	.address_wrap {
+		padding-top:
+			2.7rem;
+	}
+
+
+	.customer_wrap li:first-of-type {
+		font-size: 0.8rem;
+	}
+
+	.fmenu_wrap li:first-of-type {
+		font-size: 0.8rem;
+	}
+
+	   
+	.pctablet_slide {
+		width: 60%;
+	}
+
+}
+
+
+
+@media screen and (min-width:1300px) {
+
+	.text2 {
+		padding-left: 13rem
+	}
+
+    
+	.pctablet_slide {
+		width: 50%;
+	}
+
+
+}
+
+
+
+
+@media screen and (min-width:1500px) {
+
+	.text2 {
+		padding-left: 13rem
+	}
+
+
+}
+
+
+
+@media screen and (min-width:1700px) {
+
+	.text2 {
+		padding-left: 16rem;
+		transform: scale(1.7);
+	}
+
+
+}
+
+@media screen and (min-width:1900px) {
+
+	#section2 .text2 {
+		padding-left: 19rem
+	}
+
+
+}
+
 
