--- a/itMICHHA_portfolio.github/css/menu.css
+++ b/itMICHHA_portfolio.github/css/menu.css
@@ -1,350 +1,347 @@
-
-
-
-@media screen and (max-width:1199px) {
-  #pc_gnb{display:none;}
-}
-
-@media screen and (min-width:1200px) {
-    #pc_gnb{display:block;}
-    #pc_gnb {
-        width: 60%;
-        height: 100%;
-        margin-left: 5%;
-    }
-    #m_menu {display:none;}
+ #header {
+      width: 100%;
+      height: 55px;
+      position: relative;
+      z-index: 999;
+      position: fixed;
+      top: 0;
+      background: #fff;
   }
 
 
-  /* 공통 헤더 */
-#header {
-    width: 100%;
-    height: 50px;
-    position: relative;
-    z-index: 999;
-    position: fixed;
-    top: 0;
-    background: #fff;
-}
 
-/* .header-container {
-    height: 50px;
-    width:80%;
-    margin: 0 auto;
-    border:1px solid red;
-} */
-
-#hamburger_icon{
-    position:absolute;
-    left:20px;
-}
-.icon {
-    width: 50%;
-    float: right;
-    line-height: 50px;
-    position: absolute;
-    top: 0;
-    right: 25px;
-}
-
-.icon li {
-    float: right;
-    margin-left: 8%;
-    text-align: center;
-}
-
-.icon a {
-    font-family: Pretendard;
-    font-weight: 400;
-    font-size: 1.1rem;
-    color: #000;
-    line-height: 52px;
-}
-
-.icon a:hover {
-    font-weight: 600;
-}
-
-.xi-search {
-    font-family: "xeicon";
-    font-size: 25px;
-    color: #000;
-    opacity: 1;
-    transform: scale(1);
-    transition: all 0.5s;
-    z-index: 999;
-    position: relative;
-    top: 4px;
-}
-
-.xi-search:hover {
-    opacity: 1;
-    transform: scale(1.2);
-}
-
-
-#hamburger_icon {
-    position: relative;
-    width: 25px;
-    height: 13px;
-    margin: 15px;
-    position: absolute;
-    top: 0;
-
-}
-
-#hamburger_icon span {
-    opacity: 1;
-    left: 0;
-    display: block;
-    width: 100%;
-    height: 2px;
-    border-radius: 10px;
-    /* color:black;*/
-    background: #000;
-    position: absolute;
-    transform: rotate(0deg);
-    transition: .4s ease-in-out;
-}
-
-#hamburger_icon span:nth-child(1) {
-    top: 0;
-}
-
-#hamburger_icon span:nth-child(2) {
-    top: 9px;
-}
-
-#hamburger_icon span:nth-child(3) {
-    top: 18px;
-}
-
-.cross {
-    background: none;
-    position: absolute;
-    top: 0px;
-    right: -40px;
-    padding: 0 15px 0;
-    color: #666;
-    border: 0;
-    font-size: 3.5rem;
-    line-height: 65px;
-    font-weight: bold;
-    cursor: pointer;
-    outline: none;
-    z-index: 100000;
-    display: none;
-}
-
-
-/* 모바일메뉴 */
-#m_menu {
-    position: absolute;
-    width: 75%;
-    height: 100%;
-    max-width: 450px;
-    background: white;
-    box-shadow: rgba(100, 100, 100, 0.2) 6px 2px 10px;
-    z-index: 9999;
-    left: -75%;
-    cursor: pointer;
-}
-
-.head {
-    height: 60px;
-    background: #dd542b;
-    line-height: 60px;
-}
-
-.head ul {padding:0 30px;}
-
-.head ul li {
-    float: left;
-}
-
-.head ul li:first-child {
-    margin-right: 20px;
-}
-
-.head a {
-    color: #fff;
-}
-
-
-
-li.accordion-toggle {
-    border-top: 1px solid #dbdcd2;
-}
-
-
-li.accordion-toggle:first-child {
-    border-top:0;
-}
-
-
-li.accordion-toggle a {
-    font-weight: 500;
-}
-
-li.accordion-toggle a:hover {
-    font-weight: 600;
-}
-
-
-
-.accordion-toggle> a {
-   position: relative;
-   padding: 20px 30px;
-    letter-spacing: 1px;
-    display:block;
-}
-
-.accordion-toggle > a:before,.accordion-toggle > a:after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 30px;
-    width: 15px;
-    height: 2px;
-    margin-top: -1px;
-    background: #5a5858;
-    transform-origin: 50% 50%;
-    transition: all 0.3s ease-out;
-}
-
-.accordion-toggle> a:before {
-    transform: rotate(-90deg);
-    opacity: 1;
-    z-index: 2;
-}
-
-.accordion-toggle > a.active:before {
-    transform: rotate(0deg);
-    background: #5a5858;
-}
-
-.accordion-toggle > a.active:after {
-    transform: rotate(180deg);
-    background: #5a5858;
-    opacity: 0;
-}
-
-
-
-.menu-submenu {
-    margin: 10px 35px;
-    display:none;
-
-}
-
-.menu-submenu li {
-    height: 30px;
-}
-
-
-/* pc메뉴 */
-
-#pc_gnb {
-   height:50px;
-   /* border:1px solid red; */
-   position:relative;
-   left:130px;
-}
-
-#pc_gnb>li {
-    float: left;
-    width: 25%;
-    /*position:relative;*/
-    text-align: center;
-}
-
-#pc_gnb>li>a {
-    display: inline-block;
-    line-height: 50px;
-    margin: 0 auto;
-    font-family: Pretendard;
-    font-weight: 400;
-    font-size: 1.1rem;
-    position: relative;
-    text-align: center;
-}
-
-#pc_gnb>li>a:hover {
-    font-family: Pretendard;
-    font-weight: 600;
-}
-
-#pc_gnb>li:last-child a {
-    /*position:relative;*/
-    width: 75%;
-    text-align: Center;
-}
-
-#pc_gnb>li>a:after {
-    content: "";
-    height: 4px;
-    background: #dd542b;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 100%;
-    transition: all 0.3s cubic-bezier(0.86, 0, 0.07, 1);
-}
-
-#pc_gnb>li>a:hover:after {
-    left: 0;
-    right: 0;
-}
-
-
-
-#t_menu {
-    position: absolute;
-    left: 0;
-    top: 50px;
-    padding: 10px 0;
-    display: none;
-    width: 100%;
-    height: 240px;
-    background: rgba(255, 255, 255.1);
-    z-index: 999;
-}
-
-#menubox {
-
-    border:1px solid red;
-    width: 60%;
-    height: 100%;
+  .icon {
+      width: 50%;
+      float: right;
+      line-height: 55px;
+      position: absolute;
+      top: 0;
+      right: 35px;
+  }
+  
+  .icon li {
+      float: right;
+      margin-left: 6%;
+      text-align: center;
+  }
+  
+  .icon a {
+      font-family: Pretendard;
+      font-weight: 400;
+      font-size: 1.1rem;
+      color: #000;
+      line-height: 52px;
+  }
+  
+  .icon a:hover {
+      font-weight: 600;
+  }
+  
+  .xi-search {
+      font-family: "xeicon";
+      font-size: 1.5rem;
+      color: #000;
+      opacity: 1;
+      transform: scale(1);
+      z-index: 999;
+      position: relative;
+      top: 4px;
+      transition: all 0.5s;
+  }
+  
+  .xi-search:hover {
+      opacity: 1;
+      transform: scale(1.2);
+  }
+  
+  .header-container{
     position:relative;
-    left:130px;
+  }
+  
+  #hamburger_icon {
+      position: relative;
+      width: 24px;
+      height: 18px;
+    margin: 16px; 
+      position: absolute;
+      left: 30px;
+  }
+  
+  #hamburger_icon span {
+      opacity: 1;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 2px;
+      border-radius: 10px;
+      background: #000;
+      position: absolute;
+      transform: rotate(0deg);
+      transition: .4s ease-in-out;
+  }
+  
+  #hamburger_icon span:nth-child(1) {
+      top: 0;
+  }
+  
+  #hamburger_icon span:nth-child(2) {
+      top: 9px;
+  }
+  
+  #hamburger_icon span:nth-child(3) {
+      top: 18px;
+  }
+  
+  .cross {
+      background: none;
+      position: absolute;
+      top: 0px;
+      right: -40px;
+      padding: 0 15px 0;
+      color: #666;
+      border: 0;
+      font-size: 3.5rem;
+      line-height: 65px;
+      font-weight: bold;
+      cursor: pointer;
+      outline: none;
+      z-index: 100000;
+      display: none;
+  }
+  
+  
+  /* 모바일메뉴 */
+  #m_menu {
+      position: absolute;
+      width: 75%;
+      height: 100%;
+      max-width: 450px;
+      background: white;
+      box-shadow: rgba(100, 100, 100, 0.2) 6px 2px 10px;
+      z-index: 9999;
+      left: -75%;
+      cursor: pointer;
+  }
+  
+  .head {
+      height: 60px;
+      background: #dd542b;
+      line-height: 60px;
+  }
+  
+  .head ul {padding:0 30px;}
+  
+  .head ul li {
+      float: left;
+  }
+  
+  .head ul li:first-child {
+      margin-right: 20px;
+  }
+  
+  .head a {
+      color: #fff;
+  }
+  
+  
+  
+  li.accordion-toggle {
+      border-top: 1px solid #dbdcd2;
+  }
+  
+  
+  li.accordion-toggle:first-child {
+      border-top:0;
+  }
+  
+  
+  li.accordion-toggle a {
+      font-weight: 500;
+  }
+  
+  li.accordion-toggle a:hover {
+      font-weight: 600;
+  }
+  
+  
+  
+  .accordion-toggle> a {
+     position: relative;
+     padding: 20px 30px;
+      letter-spacing: 1px;
+      display:block;
+  }
+  
+  .accordion-toggle > a:before,.accordion-toggle > a:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 50%;
+      right: 30px;
+      width: 15px;
+      height: 2px;
+      margin-top: -1px;
+      background: #5a5858;
+      transform-origin: 50% 50%;
+      transition: all 0.3s ease-out;
+  }
+  
+  .accordion-toggle> a:before {
+      transform: rotate(-90deg);
+      opacity: 1;
+      z-index: 2;
+  }
+  
+  .accordion-toggle > a.active:before {
+      transform: rotate(0deg);
+      background: #5a5858;
+  }
+  
+  .accordion-toggle > a.active:after {
+      transform: rotate(180deg);
+      background: #5a5858;
+      opacity: 0;
+  }
+
+  .menu-submenu {
+      margin: 10px 35px;
+      display:none;
+  
+  }
+  
+  .menu-submenu li {
+      height: 30px;
+  }
+
+@media screen and (min-width:800px) {
+
+
+    #hamburger_icon{
+        left:50px;
+    }
+    .icon {
+        right: 50px;
+    }
+    
 }
 
+@media screen and (max-width:1199px) {
+    #pc_gnb{display:none;}
+  }
+  
 
+@media screen and (min-width:1200px) {
+    #pc_gnb{display:block;}
+      #pc_gnb {
+          width: 60%;
+          height: 100%;
+      }
+      #m_menu {display:none;}
+      #hamburger_icon {display:none;}
+   .icon{
+      right:100px;
+    }   
+    
+    .icon li{
+        margin-left: 4%;
+    }
 
-.menubox {
-    width: 60%;
-    margin-left: 5%;
+     
+  #pc_gnb {
+    height:55px;
+    width:55%;
+    position:relative;
+    left:120px;
+    z-index:999;
+    margin:0;
+ }
+ 
+ #pc_gnb>li {
+     float: left;
+     width: 25%;
+     /*position:relative;*/
+     text-align: center;
+ }
+ 
+ #pc_gnb li a {
+     display: inline-block;
+     line-height: 55px;
+     margin: 0 auto;
+     font-family: Pretendard;
+     font-weight: 400;
+     font-size: 1.1rem;
+     position: relative;
+     text-align: center;
+     /* border:1px solid red; */
+ }
+ 
+ #pc_gnb li a:hover {
+     font-family: Pretendard;
+     font-weight: 600;
+ }
+ 
+ #pc_gnb li a:after {
+     content: "";
+     height: 4px;
+     background: #dd542b;
+     position: absolute;
+     bottom: 0;
+     left: 0;
+     right: 100%;
+     transition: all 0.3s cubic-bezier(0.86, 0, 0.07, 1);
+ }
+ 
+ #pc_gnb li a:hover:after {
+     left: 0;
+     right: 0;
+ }
+ 
+ 
+ 
+ #t_menu {
+     position: absolute;
+     left: 0;
+     top: 50px;
+     padding: 10px 0;
+     display: none;
+     width: 100%;
+     height: 240px;
+     background: rgba(255, 255, 255.1);
+     z-index: 999;
+ }
+ 
+ #menubox {
+     width:55%;
+     /* border:1px solid red; */
+     /* width: 55%; */
+     height: 100%;
+     position:relative;
+     left:120px;
+ }
+ 
+ 
+ #t_menu ul {
+     float: left;
+     width: 25%;
+     text-align: center;
+ }
+ 
+ #t_menu ul>li>a:hover {
+     color: #dd542b;
+ }
+ 
+ #t_menu li {
+     height: 30px;
+     line-height: 30px;
+ }
+ 
+ #t_menu li a {
+     color: gray;
+     display: block;
+ }
 }
+	
 
-#t_menu ul {
-    float: left;
-    width: 25%;
-    text-align: center;
-}
 
-#t_menu ul>li>a:hover {
-    color: #dd542b;
-}
-
-#t_menu li {
-    height: 30px;
-    line-height: 30px;
-}
-
-#t_menu li a {
-    color: gray;
-    display: block;
-}
 
 
