--- a/market_B/css/marketB.css
+++ b/market_B/css/marketB.css
@@ -1,29 +1,70 @@
+@font-face {
+	font-family: 'Pretendard';
+	src: url(../font/Pretendard-Light.woff2) format('woff');
+	font-weight: 300;
+	font-style: normal;
+}
+
+
+@font-face {
+	font-family: 'Pretendard';
+	src: url(../font/Pretendard-Regular.woff2) format('woff');
+	font-weight: 400;
+	font-style: normal;
+}
+
+
+@font-face {
+	font-family: 'Pretendard';
+	src: url(../font/Pretendard-Medium.woff2) format('woff');
+	font-weight: 500;
+	font-style: normal;
+}
+
+
+@font-face {
+	font-family: 'Pretendard';
+	src: url(../font/Pretendard-SemiBold.woff2) format('woff');
+	font-weight: 600;
+	font-style: normal;
+}
+
+*{
+  box-sizing: border-box;
+}
+body  {
+	font-family: Pretendard;
+	font-size: 1rem;
+  font-weight: 400;
+	color: #000;
+}
+
+body a {
+  text-decoration: none;
+  color:#000;
+  
+}
+
 
 #header {
-  width: 100%;
-  height: 160px;
+ width: 100%;
+  height:180px;
   position: relative;
-  z-index: 999;
+  z-index: 9999;
   position: fixed;
   top: 0;
   background: rgba(250, 250, 250);
-  /* border: 1px solid blue; */
 }
 
-a {
-  text-decoration: none;
-  color: #000;
-}
 
 .header-container {
-  margin: 40px 0;
-  position:absolute;left: 120px;
-  /* border: 1px solid blue; */
+  margin: 40px auto 50px;
+  position:absolute;
+  left: 120px;
 }
 
 .head {
   display: flex;
-  /* border: 1px solid blue; */
 }
 
 .head h2 img {
@@ -44,6 +85,7 @@ input {
   box-shadow: 1px 2px 2px rgba(0, 0, 0, .3);
 }
 
+
 form {
   height: 30px;
 }
@@ -51,7 +93,7 @@ form {
  .gnb {
   height: 36px;
   position:relative;
-  margin-top:25px;
+  margin-top:50px;
 }
 
 .gnb ul{
@@ -111,19 +153,53 @@ form {
 
 
 /* 메인배너 */
-#banner_pc {position:relative; top:129px; }
-.slide_banner img {width:100%;}
-.slide_banner button {position:absolute; top:50%;  z-index: 999; width:2.3rem;
-              height:2.3rem; border-radius: 100%; background: rgba(0,0,0,0.4);
-              border:none; outline: none;transform: translateY(-50%);}
+#banner_pc {
+  position: relative;
+  top:180px;
+}
 
-.slide_banner button::before {font-family: "xeicon";color:#fff; font-size: 1.25rem;}
-.slide_banner button.slick-prev { left:2rem; font-size: 0; color:transparent; }
-.slide_banner button.slick-prev:before {content:"\e93d";}
-.slide_banner button.slick-next {right: 2rem;font-size:0; color:transparent;}
-.slide_banner button.slick-next:before {content:"\e940";}
+.slide_banner img {
+  width:100%;
+}
 
+.slide_banner button {
+  position: absolute;
+  top: 50%;
+  z-index: 999;
+  width: 2.3rem;
+  height: 2.3rem;
+  border-radius: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  border: none;
+  outline: none;
+  transform: translateY(-50%);
+}
 
+.slide_banner button::before {
+  font-family: "xeicon";
+  color: #fff;
+  font-size: 1.25rem;
+}
+
+.slide_banner button.slick-prev {
+  left: 2rem;
+  font-size: 0;
+  color: transparent;
+}
+
+.slide_banner button.slick-prev:before {
+  content: "\e93d";
+}
+
+.slide_banner button.slick-next {
+  right: 2rem;
+  font-size: 0;
+  color: transparent;
+}
+
+.slide_banner button.slick-next:before {
+  content: "\e940";
+}
 .slick-dots {
   position: absolute;
   bottom: 1.5rem;
@@ -151,18 +227,21 @@ form {
   background: rgba(0, 0, 0, 1);
 }
 
-#iconmenu {width:100%; height:220px;margin:0 auto; box-sizing: border-box; padding:170px 0; }
+#iconmenu {width:100%; height:220px;margin:50px auto 0; box-sizing: border-box; padding:170px 0; }
 #iconmenu ul {text-align:center; width:85%;display:flex; margin:0 auto;}
 #iconmenu ul li {width:100%;}
 #iconmenu ul li img {width:60%;}
-#iconmenu ul li a{font-weight: 500; font-size:13px;}
+#iconmenu ul li a{font-weight: 500; font-size:0.7rem;}
 #iconmenu ul li span {display:block;margin:9px auto;}
 #iconmenu ul li:last-child {margin-right:0;}
 
 
-
+.nav {
+  padding:10px 0;
+  border-bottom: 2px solid rgba(55,55,55,1);
+}
 #tab_wrapper {
-  width: 85%; margin:0 auto;
+  width: 85%; margin:50px auto;
 }
 
 .tab_menu {
@@ -172,15 +251,40 @@ form {
 }
 
 .tab_menu li a {
+  font-size:1.2rem;
+  color:rgba(154,154,154,1);
   font-weight: bold;
-  font-size:rem;
-  line-height: 2.3rem;
   display: block;
-  padding: 0.1rem 0.5rem;
+  padding: 0.5rem 0.8rem;
 }
+
+.tab menu li a.selcected {
+  color:rgba(0,0,0,1);
+
+}
+.tbtn {
+  display:flex;
+  width: 100%;
+  margin-top:50px;
+}
+
+.tbtn li {
+  margin-right: 2rem;
+}
+
+.tbtn li a {
+  border-radius: 50px;
+  font-size: 0.7rem;
+  text-align: center;
+  padding: 0.5rem 1.3rem;
+  border: 2px solid #ebebebfc;
+    box-shadow:  0 2px 2px rgba(0,0,0, 0.3);
+}
+
 
 .content {
   width: 100%;
+  margin-top: 50px;
   display:flex;
 }
 
@@ -192,5 +296,6 @@ form {
   width: 100%;
 }
 
-
-.panel {margin-top:2rem;}
+.blank {
+  height:1
+}
