--- a/itMICHHA_portfolio.github/css/menu.css
+++ b/itMICHHA_portfolio.github/css/menu.css
@@ -112,7 +112,7 @@
   
   /* 모바일메뉴 */
   #m_menu {
-      position: absolute;
+      position: fixed;
       width: 75%;
       height: 100%;
       max-width: 450px;
