--- a/profile_portfolio_main_24.1.2/css/menu.css
+++ b/profile_portfolio_main_24.1.2/css/menu.css
@@ -1,120 +1,236 @@
 @import url('https://fonts.googleapis.com/css?family=Hind|Montserrat');
-#header {width:100%; height:5rem; position:relative;z-index:999; position:fixed; top: 0; background:rgba(250, 250, 250, 0.8)}
-a{text-decoration: none; color:#000;}
-.header-container {width:60%; margin:0 auto;}
-.gnb {width: 60%; height:100%; margin:0 auto;} 
-  
-.gnb> li{float:left;width:33.33%; text-align:center; }
 
-.gnb> li >a{  display:inline-block;  line-height: 5rem; padding: 0 1rem; font-size:1.1rem; text-align:center; font-weight:600; }
+.header {
+  width: 100%;
+  height: 80px;
+  position: relative;
+  z-index: 999;
+  position: fixed;
+  top: 0;
+  background: rgba(250, 250, 250,0.9);
+  font-family: 'Montserrat', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+.header-container {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.gnb {
+  width: 60%;
+  height: 100%;
+  margin: 0 auto;
+}
+
+.gnb>li {
+  float: left;
+  width: 33.33%;
+  text-align: center;
+}
+
+.gnb>li>a {
+  display: block;
+  line-height: 5rem;
+  /* padding: 0 1rem; */
+  font-size: 1.1rem;
+  text-align: center;
+  font-weight: 600;
+}
 
 
 #hamburger-menu {
-  width:25px;
-  height:13px;
-  margin:15px;
-	position:fixed; top:1rem; left:1rem;
-	/* display:none; */
-  z-index:999;
-
-}
- #hamburger-menu span{
-	opacity:1;
-	left:0;
-	display:block;
-	width:100%;
-	height:2px;
-	border-radius:10px;
-	background:#000;
-	position:absolute;
-
-}
-
-#hamburger-menu span:nth-child(1) {top:0;}
-#hamburger-menu span:nth-child(2) {top:9px;}
-#hamburger-menu span:nth-child(3) {top:18px;}
-
-#menu-container {cursor:pointer;}
-#menu-container a {color:#fff;}
-.cross{
-	background:none;
-	position:absolute;
-	top:0px;
-  right:-40px;
-	padding:0 15px 0;
-	color:#666;
-	border:0;
-	font-size:3.5rem;
-	line-height:65px;
-	font-weight:bold;
-	cursor:pointer;
-	outline:none;
-	z-index:100000;
-	display:none;
-  }
-  
-.head {height:60px;background: #403c3b;
-
-}
-
-.search img {width:55%;}
-.head a {color:#fff;}
- .menu-submenu {margin: 10px 15px;}
- .menu-submenu li {height:30px;}
- .menu-submenu li a {font-size: 0.8rem;}
-
- #menu-container{
+  width: 25px;
+  height: 13px;
+  margin: 15px;
   position: fixed;
-  width:75%;
-  height:100%;
-  max-width:450px;
-  background:#403c3b;;
-  box-shadow: rgba(100,100,100,0.2) 6px 2px 10px;
-  z-index:9999999;
-  top:0;
-  left:-75%;
- }
+  top: 1rem;
+  left: 1rem;
+  z-index: 999;
 
- .accordion { padding:20px;  letter-spacing: 1px; }
- .accordion-toggle{
-    padding:20px; }
-  .accordion:nth-child(n+2):nth-child(-n+3) {border-top:1px solid #999; }
-  .accordion-toggle:hover {font-weight:600;font-size:1rem;}
+}
+
+#hamburger-menu span {
+  opacity: 1;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 2px;
+  border-radius: 10px;
+  background: #000;
+  position: absolute;
+
+}
+
+#hamburger-menu span:nth-child(1) {
+  top: 0;
+}
+
+#hamburger-menu span:nth-child(2) {
+  top: 9px;
+}
+
+#hamburger-menu span:nth-child(3) {
+  top: 18px;
+}
+
+#menu-container {
+  cursor: pointer;
+}
+
+#menu-container a {
+  color: #fff;
+}
+
+.cross {
+  background: none;
+  position: absolute;
+  top: 0px;
+  right: -40px;
+  padding: 0 15px 0;
+  color: #666;
+  border: 0;
+  font-size: 3.5rem;
+  line-height: 65px;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+  z-index: 100000;
+  display: none;
+}
+
+.head {
+  height: 60px;
+  background: #403c3b;
+
+}
+
+.search img {
+  width: 55%;
+}
+
+.head a {
+  color: #fff;
+}
+
+#menu-container {
+  position: fixed;
+  width: 75%;
+  height: 100%;
+  max-width: 450px;
+  background: #403c3b;
+  ;
+  box-shadow: rgba(100, 100, 100, 0.2) 6px 2px 10px;
+  z-index: 9999999;
+  top: 0;
+  left: -75%;
+  cursor:pointer;
+}
+
+.accordion {
+  padding: 20px;
+  letter-spacing: 1px;
+}
+
+.accordion-toggle {
+  padding: 20px;
+}
+
+.accordion:nth-child(n+2):nth-child(-n+3) {
+  border-top: 1px solid #999;
+}
+
+.accordion-toggle:hover {
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.accordion-toggle a{
+  z-index:9999;
+  position:relative;
+  display:block;
+}
+
+.accordion-toggle>a:before,
+.accordion-toggle> a:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 30px;
+  width: 15px;
+  height: 2px;
+  margin-top: -1px;
+  background: #fff;
+  transform-origin: 50% 50%;
+  transition: all 0.3s ease-out;
+}
+
+.accordion-toggle > a:before {
+  transform: rotate(-90deg);
+  opacity: 1;
+  z-index: 2;
+}
+
+.accordion-toggle > a.active {
+  font-weight: 600;
+}
+
+.accordion-toggle > a.active:before {
+  transform: rotate(0deg);
+  background: #5a5858;
+}
+
+.accordion-toggle > a.active:after {
+  transform: rotate(180deg);
+  background: #5a5858;
+  opacity: 0;
+}
 
 
-  .accordion-toggle, .accordion-content {
-    cursor: pointer;  position: relative;}
+#hamburger-menu {
+  display: none;
+}
 
-  .accordion-content {    display: none; padding:0 5%;  letter-spacing: 1px;}
 
-  .accordion-toggle a:before, .accordion-toggle a:after {
-    content: '';
-    display: block;
-    position:absolute;
-    top: 50%;
-    right:30px;
-    width:15px;
-    height:2px;
-    margin-top:-1px;
-    background: #fff;
-    transform-origin: 50% 50%;
-    transition:all 0.3s ease-out;
+.menu-submenu {
+  margin: 20px 15px;
+  display: none;
+}
+
+.menu-submenu li {
+  height: 30px;
+}
+
+.menu-submenu li a {
+  font-size: 0.8rem;
+}
+
+
+@media screen and (max-width:1900px) {
+  .gnb {
+    width: 85%;
+    height: 100%;
+    margin: 0 auto;
+    padding-right: 0.5rem;
   }
- 
-.accordion-toggle a:before {transform:rotate(-90deg); opacity:1; z-index:2;}
-.accordion-toggle a.active {font-weight:600;}
-.accordion-toggle a.active:before {transform: rotate(0deg); background:#5a5858;}
-.accordion-toggle a.active:after { transform: rotate(180deg);background: #5a5858; opacity: 0;}  
-
-
-#hamburger-menu {display:none;}
-
-@media screen and (max-width:1900px){   
- .gnb{  width: 85%; height:100%; margin:0 auto; padding-right:0.5rem; } 
 }
 
-@media screen and (max-width:1200px){ 
-  
-    #hamburger-menu {display:block;}
-    #header {display:none;}
+@media screen and (max-width:1200px) {
+
+  #hamburger-menu {
+    display: block;
+  }
+
+  .header-container {
+    display:none;
+   }
+
+   
 }
+
+
