--- a/market_B/marketB_project_mobile/css/tab.css
+++ b/market_B/marketB_project_mobile/css/tab.css
@@ -84,6 +84,52 @@ header .material-symbols-outlined  {
   transform:translate(-50%,-10%);
 }
 
+
+/* 페이지네이션 */
+
+.mainbanner {
+  position:relative;
+}
+
+.mainbanner .swiper-pagination {
+  width: 70px;
+  height: 34px;
+  background: rgba(0, 0, 0, 0.3);
+  bottom: 34px;
+  border-radius: 50px;
+  right: 34px;
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 15px;
+  line-height: 34px;
+}
+
+.mainbanner .swiper-pagination .mainbanner_bar {
+  width: 2px;
+  height: 12px;
+  background-color: #fff;
+  display: inline-block;
+  margin: 0 3px;
+  transform: translate(1px, 1px)
+}
+
+.mainbanner .swiper-pagination-current {
+  color: #fff !important;
+}
+
+.mainbanner .swiper-progressbar {
+   height: 4px;
+  background: #e2e2e2;
+  bottom: 0;
+  border-radius: 50px;
+  left: 50%;
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 15px;
+  line-height: 30px;
+  /* z-index: 1; */
+  /* top: inherit; */
+}
+
+
 #pc-mainbanner {
   display:none;
 }
